# hamletmachine

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: data_config.yaml  data_config.yaml.example  train_config.yaml.example
data/processed/: test.jsonl  train.jsonl  validation.jsonl
docs/: cloud-gpu-options.md  colab-setup-guide.md  data-extraction-cleaning-usage.md
notebooks/: train_on_colab.ipynb
scripts/: build_balanced_dataset.py  process_data.py  setup_colab.py  setup_colab.sh
src/hamletmachine/: __init__.py
src/hamletmachine/data/: __init__.py  cleaner.py  config_loader.py  extractor.py  formatter.py  loader.py  pipeline.py  splitter.py  tokenizer_setup.py
src/hamletmachine/inference/: __init__.py
src/hamletmachine/models/: __init__.py
src/hamletmachine/utils/: __init__.py  environment.py
tests/: test_data_cleaning.py
training_materials/: DasKapital_ENG.txt  Hamletmachine_ENG.txt
